# dask-tpcdi

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
dask_tpcdi/: definitions.py  utils.py
dask_tpcdi/assets/: __init__.py
dask_tpcdi/assets/bronze/: cash_transaction.py  constants.py  customer_mgmt.py  customer_mgmt.xsl  daily_market.py  date.py  finwire.py  holding_history.py  hr.py  industry.py  prospect.py  status_type.py  tax_rate.py  time.py  trade.py  trade_history.py  trade_type.py  watch_history.py
dask_tpcdi/assets/gold/: company.py  constants.py  date.py  time.py
dask_tpcdi/assets/landing/: constants.py
dask_tpcdi/assets/raw/: cash_transaction.py  constants.py  customer_mgmt.py  hr.py  status_type.py  tax_rate.py  trade.py  trade_history.py  trade_type.py
dask_tpcdi/assets/silver/: broker.py  company.py  constants.py  date.py  industry.py  security.py  status_type.py  tax_rate.py  time.py
dask_tpcdi/assets/staging/: constants.py
